# package-manager-mcp

./: .dev-mcp.json  .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  Makefile  README.md  flake.nix  rover.json
.claude/commands/: create-issue.md  create-pr.md
.github/workflows/: ci.yaml  release.yml
output/: summary.md
src/: apk.rs  main.rs
src/backend/: apk.rs  apt.rs  mod.rs
