[package]
name = "package-manager-mcp"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = "0.8.4"
cfg-if = "1.0.1"
clap = { version = "4.5.41", features = ["derive"] }
rmcp = { version = "0.3.0", features = ["server", "transport-streamable-http-server", "transport-worker"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
